Fixed Blank White screen when logged in and server is closed.
Once again Fixed invalid character in header.php and Notice: Undefined variable: l_lang_attribute.
Fixed  Notice: Use of undefined constant ship_id - assumed 'ship_id' and character_name - assumed 'character_name'
Fixed Notice: Undefined variable: targetinfo and missing language vars.

TheMightyDude (18 July 2012)
--------------------------------------
Temp hack/fix for the player log until we have a better way to do it.
Fixed bug in main.php, readmail.php, mailto2.php Notice: Use of undefined constant ship_id - assumed 'ship_id'
Fixed Missing language variables when upgrading the ship at the Special Port.
Fixed Depolying Sector Defences, added a div container with overflow so that we can scroll defences.
Fixed Notice: Undefined index: port_shopping in port2.php
Fixed Notice:Use of undefined constant ship_id, undefined offset 1 in check_fighters.php and check_mines.php

TheKabal (18 July 2012)     
--------------------------------------  
Add slashes to subject before saving to database, allowing apostrohphes ("It can't work otherwise").
Restore changes from changelog
Fix undefined constant 'team' in planet_report.     
Fix missing space in "You have messages waiting" alert in main  
Fix undefined constants in includes/calc_ownership.php  
Fix missing language string "Planet" in planet menu     
Fix undefined variable l_toplanetmenu in planet2 when transferring to planet    
Fix news headline to add space before "5 planets"   
Fix goto main link in rsmove    
Fixes for undefined constants in traderoutes with a planet

TheMightyDude (17 July 2012)
--------------------------------------
Fixed missing 'amount' field in IGB_transfers error.
Fixed mail.php, it now sends the email with the password.
Fixed lanuage ini files for email needs to be \r\n and not just \n
Fixed l_mail_topic in language ini files so that they all use [game_name]
Removed the mailer_class.php due to its not used.